--- a/package.json
+++ b/package.json
@@ -43,22 +43,23 @@
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
+  "peerDependencies": {},
   "dependencies": {
     "@aws-cdk/assert": "^1.133.0",
     "@aws-cdk/aws-athena": "^1.133.0",
     "@aws-cdk/aws-codebuild": "^1.133.0",
     "@aws-cdk/aws-codecommit": "^1.133.0",
     "@aws-cdk/aws-codedeploy": "^1.133.0",
-    "@aws-cdk/aws-codepipeline": "^1.133.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.133.0",
+    "@aws-cdk/aws-codepipeline": "^1.133.0",
     "@aws-cdk/aws-config": "^1.133.0",
     "@aws-cdk/aws-glue": "^1.133.0",
     "@aws-cdk/aws-guardduty": "^1.133.0",
     "@aws-cdk/aws-iam": "^1.133.0",
     "@aws-cdk/aws-lambda": "^1.133.0",
     "@aws-cdk/aws-logs": "^1.133.0",
-    "@aws-cdk/aws-s3": "^1.133.0",
     "@aws-cdk/aws-s3-notifications": "^1.133.0",
+    "@aws-cdk/aws-s3": "^1.133.0",
     "@aws-cdk/cloudformation-include": "^1.133.0",
     "@aws-cdk/core": "^1.133.0",
     "@aws-cdk/pipelines": "^1.133.0",
