--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
-    "aws-cdk": "^1.133.0",
-    "cdk-assume-role-credential-plugin": "^1.4.0",
+    "aws-cdk": "^2.66.1",
     "eslint": "^7.32.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -44,25 +43,10 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.133.0",
-    "@aws-cdk/aws-athena": "^1.133.0",
-    "@aws-cdk/aws-codebuild": "^1.133.0",
-    "@aws-cdk/aws-codecommit": "^1.133.0",
-    "@aws-cdk/aws-codedeploy": "^1.133.0",
-    "@aws-cdk/aws-codepipeline": "^1.133.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.133.0",
-    "@aws-cdk/aws-config": "^1.133.0",
-    "@aws-cdk/aws-glue": "^1.133.0",
-    "@aws-cdk/aws-guardduty": "^1.133.0",
-    "@aws-cdk/aws-iam": "^1.133.0",
-    "@aws-cdk/aws-lambda": "^1.133.0",
-    "@aws-cdk/aws-logs": "^1.133.0",
-    "@aws-cdk/aws-s3": "^1.133.0",
-    "@aws-cdk/aws-s3-notifications": "^1.133.0",
-    "@aws-cdk/cloudformation-include": "^1.133.0",
-    "@aws-cdk/core": "^1.133.0",
-    "@aws-cdk/pipelines": "^1.133.0",
+    "@aws-cdk/assert": "^2.66.1",
+    "aws-cdk-lib": "^2.66.1",
     "chalk": "^4.1.2",
+    "constructs": "^10.0.5",
     "path": "^0.12.7",
     "yamljs": "^0.3.0"
   },
